Fix some z-index issues with os chooser

--- a/src/components/os-chooser/os-chooser.scss
+++ b/src/components/os-chooser/os-chooser.scss
@@ -4,7 +4,7 @@
     display: flex;
     position: sticky;
     top: 50px;
-    z-index: 1;
+    z-index: 10;
     box-shadow: 0 0 3px $box-shadow-gray;
     background-color: $ui-white;
     padding: 0;
